--- a/styles/main.css
+++ b/styles/main.css
@@ -1,24 +1,53 @@
+@font-face {
+  font-family: WorkSans-Light;
+  src: url('WorkSans-Light.woff2');
+}
+
 body {
   background: #000000;
-  color: #D8D8D8;
-  font-family: monospace;
+  color: #ff810c;
+  font-family: WorkSans-Light sans-serif;
+  font-size: 20px;
   margin: 0px auto;
   max-width: 700px;
   text-align: center;
   width:100%;
 }
-a {
-  color: #D8D8D8;
-}
+
 img {
   max-width: 400px;
 }
+
 ul {
   text-align: left;
 }
-.header {
-  font-size: 20px;
+
+a {
+  color: #ff810c;
 }
-.content {
-  font-size: 16px;
+
+a:hover {
+  color: #ffa70d;
+}
+
+hr {
+  color: #1C1C1C;
+}
+
+.footer, .header {
+  padding: 0.5em;
+}
+
+.footer {
+  font-size: 15px;
+}
+
+.button {
+  background: #1C1C1C;
+  border: 0.2px solid #2E2E2E;
+  border-radius: 1.3px;
+  box-shadow: 1px 1px 1px #424242, 2px 0px 1px #585858;
+  cursor: pointer;
+  padding: 0.2em 0.3em;
+  text-decoration: none;
 }
