--- a/styles/main.css
+++ b/styles/main.css
@@ -51,3 +51,9 @@ hr {
   padding: 0.2em 0.3em;
   text-decoration: none;
 }
+
+.intro {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+}
